environment/react-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-nginx
  labels: 
    group: frontend
spec:
  type: ClusterIP
  selector:
    app: react-nginx
  ports:
    - port: 80
      targetPort: 80
