environment/react-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: demo.react-nginx.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-nginx
                port: 
                  number: 80
